--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,12 +5,12 @@ GameName=Director_AI_Game
 r.MobileHDR=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+EditorStartupMap=/Game/2DSideScrollerBP/Maps/LianaTestLevel.LianaTestLevel
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+GameDefaultMap=/Game/2DSideScrollerBP/Maps/LianaTestLevel.LianaTestLevel
 GlobalDefaultGameMode=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode.2DSideScrollerGameMode_C
 GlobalDefaultServerGameMode=None
 
