Turned off Aniti-Aliasing and motion blur to get the sprite looking crisp.
Turns out this is necessary when using sprites with a Perspective camera mode.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,8 @@ GameName=Director_AI_Game
 
 [/Script/Engine.RendererSettings]
 r.MobileHDR=False
+r.DefaultFeature.AntiAliasing=0
+r.DefaultFeature.MotionBlur=False
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/2DSideScrollerBP/Maps/LianaTestLevel.LianaTestLevel
