--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -85,12 +85,15 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
 +ActionMappings=(ActionName="QuickDrop",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
 +ActionMappings=(ActionName="QuickDrop",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Down)
-+ActionMappings=(ActionName="QuickDrop",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
++ActionMappings=(ActionName="QuickDrop",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftStick_Down)
++ActionMappings=(ActionName="QuickDrop",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Down)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_LeftX)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Left)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_DPad_Right)
++AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Gamepad_DPad_Left)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/LeftVirtualJoystickOnly.LeftVirtualJoystickOnly
