Played around with sprite settings to optimize...nothing too noticeable yet.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,6 +5,14 @@ GameName=Director_AI_Game
 r.MobileHDR=False
 r.DefaultFeature.AntiAliasing=0
 r.DefaultFeature.MotionBlur=False
+r.TranslucentSortPolicy=2
+r.SeparateTranslucency=True
+r.DefaultFeature.Bloom=False
+r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.AutoExposure=True
+r.UsePreExposure=False
+r.DefaultFeature.AmbientOcclusionStaticFraction=True
+r.Shadow.UnbuiltPreviewInGame=False
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/2DSideScrollerBP/Maps/LianaTestLevel.LianaTestLevel
