--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -36,4 +36,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_2DSideScrollerBP",NewGameName="/Script/Director_AI_Game")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_2DSideScrollerBP",NewGameName="/Script/Director_AI_Game")
+bUseFixedFrameRate=True
+FixedFrameRate=60.000000
 
