--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -8,7 +8,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Shipping
 BuildTarget=
 StagingDirectory=(Path="")
-FullRebuild=False
+FullRebuild=True
 ForDistribution=True
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
