--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,76 +1,3 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=49B07E3B44D3C700E90B3B96DAE69134
-ProjectName=Robo Dash
-Description=Final project game for the CPSC 599.11 class.
-
-[/Script/UnrealEd.ProjectPackagingSettings]
-Build=IfProjectHasCode
-BuildConfiguration=PPBC_Shipping
-BuildTarget=
-StagingDirectory=(Path="")
-FullRebuild=True
-ForDistribution=True
-IncludeDebugFiles=False
-BlueprintNativizationMethod=Disabled
-bIncludeNativizedAssetsInProjectGeneration=False
-bExcludeMonolithicEngineHeadersInNativizedCode=False
-UsePakFile=True
-bUseIoStore=False
-bMakeBinaryConfig=False
-bGenerateChunks=False
-bGenerateNoChunks=False
-bChunkHardReferencesOnly=False
-bForceOneChunkPerFile=False
-MaxChunkSize=0
-bBuildHttpChunkInstallData=False
-HttpChunkInstallDataDirectory=(Path="")
-bCompressed=True
-PakFileCompressionFormats=Oodle
-bForceUseProjectCompressionFormatIgnoreHardwareOverride=False
-PakFileAdditionalCompressionOptions=-compressionblocksize=256KB
-PakFileCompressionMethod=Kraken
-PakFileCompressionLevel_DebugDevelopment=3
-PakFileCompressionLevel_TestShipping=5
-PakFileCompressionLevel_Distribution=7
-HttpChunkInstallDataVersion=
-IncludePrerequisites=True
-IncludeAppLocalPrerequisites=False
-bShareMaterialShaderCode=True
-bDeterministicShaderCodeOrder=False
-bSharedMaterialNativeLibraries=True
-ApplocalPrerequisitesDirectory=(Path="")
-IncludeCrashReporter=False
-InternationalizationPreset=English
--CulturesToStage=en
-+CulturesToStage=en
-LocalizationTargetCatchAllChunkId=0
-bCookAll=False
-bCookMapsOnly=True
-bSkipEditorContent=False
-bSkipMovies=False
--IniKeyBlacklist=KeyStorePassword
--IniKeyBlacklist=KeyPassword
--IniKeyBlacklist=rsa.privateexp
--IniKeyBlacklist=rsa.modulus
--IniKeyBlacklist=rsa.publicexp
--IniKeyBlacklist=aes.key
--IniKeyBlacklist=SigningPublicExponent
--IniKeyBlacklist=SigningModulus
--IniKeyBlacklist=SigningPrivateExponent
--IniKeyBlacklist=EncryptionKey
--IniKeyBlacklist=IniKeyBlacklist
--IniKeyBlacklist=IniSectionBlacklist
-+IniKeyBlacklist=KeyStorePassword
-+IniKeyBlacklist=KeyPassword
-+IniKeyBlacklist=rsa.privateexp
-+IniKeyBlacklist=rsa.modulus
-+IniKeyBlacklist=rsa.publicexp
-+IniKeyBlacklist=aes.key
-+IniKeyBlacklist=SigningPublicExponent
-+IniKeyBlacklist=SigningModulus
-+IniKeyBlacklist=SigningPrivateExponent
-+IniKeyBlacklist=EncryptionKey
-+IniKeyBlacklist=IniKeyBlacklist
-+IniKeyBlacklist=IniSectionBlacklist
-+MapsToCook=(FilePath="/Game/2DSideScrollerBP/Maps/LianaTestLevel")
-
+ProjectName=2D Side Scroller Game Blueprint Template
